some fixes on draft CSS

--- a/app/views/league.view.html
+++ b/app/views/league.view.html
@@ -1,22 +1,24 @@
-<p ng-if="league==null">Loading...</p>
-<div ng-if="league != null">
-  <p>League "{{league.name}}" </p>
+<div class = "container-fluid">
+  <p ng-if = "league==null">Loading...</p>
+  <div ng-if = "league != null">
+    <p>League "{{league.name}}" </p>
 
-  <p>code: {{league_id}}<p>
-  <pre>{{league}}</pre>
+    <p>code: {{league_id}}
+    <p>
+    <pre>{{league}}</pre>
 
-  <p ng-if="league.state != 'DURATION'"><a ui-sref="draft({id:league_id})">Draft</a></p>
-  <p><a ui-sref="team_management">My Team</a></p>
-  <p><a ui-sref="players">League Players</a></p>
+    <p ng-if = "league.state != 'DURATION'"><a ui-sref = "draft({id:league_id})">Draft</a></p>
+    <p><a ui-sref = "team_management">My Team</a></p>
+    <p><a ui-sref = "players">League Players</a></p>
 
-  Users:
-  <ul>
-    <li  ng-repeat="user in league.users">
-      {{user.name}}
-    </li>
-  </ul>
+    Users:
+    <ul>
+      <li ng-repeat = "user in league.users">
+        {{user.name}}
+      </li>
+    </ul>
 
-  <p ng-if="user==league.creator"><a ng-click="delete()">Delete</a></p>
+    <p ng-if = "user==league.creator"><a ng-click = "delete()">Delete</a></p>
 
+  </div>
 </div>
-
