--- a/app/views/login.view.html
+++ b/app/views/login.view.html
@@ -1,5 +1,6 @@
-<div class="jumbotron">
-  <p>Login</p>
-  <div ng-include="'views/partials/fbLoginButton.html'"></div>
+<div class = "container-fluid">
+  <div class = "jumbotron">
+    <p>Login</p>
+    <div ng-include = "'views/partials/fbLoginButton.html'"></div>
+  </div>
 </div>
-
