--- a/app/styles/draft.scss
+++ b/app/styles/draft.scss
@@ -2,10 +2,8 @@
 
 #draft {
   #roundsRow {
-    position: fixed;
-    bottom: 0;
     width: 100%;
-    max-height: 20%;
+    margin: -20px 0 2em 0;
 
     #roundsAccordion {
       display: block;
