--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -3,7 +3,87 @@
 
 <div ng-if="state=='connected'">
   <div class="" id="draft">
-    <div class="row" id="draftRow">
+    <!-- ROUNDS  -->
+    <div class="row" id="roundsRow">
+      <div class="accordion col-xs-12 no-padding" id="roundsAccordion">
+        <ul id="roundsList">
+          <li class="panel panel-default panel-horizontal">
+            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive = false" ng-click="isActive = !isActive">
+              <h5 class="panel-title">R o u n d<hr>1</h5>
+            </div>
+            <div class="panel-body">
+              <ul>
+                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
+                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
+                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
+                  {{user_list.usernames[user_id]}}
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="panel panel-default panel-horizontal">
+            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive=false" ng-click="isActive = !isActive">
+              <h5 class="panel-title">R o u n d<hr>2</h5>
+            </div>
+            <div class="panel-body">
+              <ul>
+                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
+                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
+                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
+                  {{user_list.usernames[user_id]}}
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="panel panel-default panel-horizontal">
+            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive=false" ng-click="isActive = !isActive">
+              <h5 class="panel-title">R o u n d<hr>3</h5>
+            </div>
+            <div class="panel-body">
+              <ul>
+                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
+                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
+                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
+                  {{user_list.usernames[user_id]}}
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="panel panel-default panel-horizontal">
+            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive=false" ng-click="isActive = !isActive">
+              <h5 class="panel-title">R o u n d<hr>4</h5>
+            </div>
+            <div class="panel-body">
+              <ul>
+                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
+                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
+                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
+                  {{user_list.usernames[user_id]}}
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="panel panel-default panel-horizontal">
+            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive=false" ng-click="isActive = !isActive">
+              <h5 class="panel-title">R o u n d<hr>5</h5>
+            </div>
+            <div class="panel-body">
+              <ul>
+                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
+                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
+                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
+                  {{user_list.usernames[user_id]}}
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- /ROUNDS  -->
+
+    <div class="container-fluid">
+      <div class="row" id="draftRow">
       <div class="col-lg-12 no-padding">
         <!-- Players Section -->
         <div class="col-lg-6"  id="draft_table_section">
@@ -74,10 +154,8 @@
                       <td>{{ player.name }}</td>
                       <td>{{ player.team }}</td>
                       <td>
-                        <button ng-href="#"><i class="fa fa-star"></i> Favorite</button>
-                        <div ng-if="team < 23">
-                          <button ng-click="pick(player.data_id)"><i class="fa fa-hand-pointer-o"></i> Pick</button>
-                        </div>
+                        <button ng-click=""><i class="fa fa-star"></i> Favorite</button>
+                        <button ng-if="team < 23" ng-click="pick(player.data_id)"><i class="fa fa-hand-pointer-o"></i> Pick</button>
                       </td>
                     </tr>
                     </tbody>
@@ -110,7 +188,7 @@
                       <td>{{ player.positionDescription }}</td>
                       <td>{{ player.name }}</td>
                       <td>{{ player.team }}</td>
-                      <td>  
+                      <td>
                         <button ng-href="#"><i class="fa fa-star"></i> Favorite</button>
                         <div ng-if="team < 23">
                           <button ng-click="pick(player.data_id)"><i class="fa fa-hand-pointer-o"></i> Pick</button>
@@ -300,7 +378,7 @@
               <ul>
                 <li ng-repeat="pick in picks">
                   <div ng-if="players[pick.player_id].positionDescription == 'Goalkeeper'">
-                    {{players[pick.player_id].name}}  
+                    {{players[pick.player_id].name}}
                   </div>
                 </li>
               </ul>
@@ -337,84 +415,6 @@
         <!-- /Picked Players -->
       </div>
     </div>
-
-    <!-- ROUNDS  -->
-    <div class="row" id="roundsRow">
-      <div class="accordion col-xs-12 no-padding" id="roundsAccordion">
-        <ul id="roundsList">
-          <li class="panel panel-default panel-horizontal">
-            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive = false" ng-click="isActive = !isActive">
-              <h5 class="panel-title">R o u n d<hr>1</h5>
-            </div>
-            <div class="panel-body">
-              <ul>
-                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
-                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
-                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
-                  {{user_list.usernames[user_id]}}
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="panel panel-default panel-horizontal">
-            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive=false" ng-click="isActive = !isActive">
-              <h5 class="panel-title">R o u n d<hr>2</h5>
-            </div>
-            <div class="panel-body">
-              <ul>
-                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
-                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
-                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
-                  {{user_list.usernames[user_id]}}
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="panel panel-default panel-horizontal">
-            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive=false" ng-click="isActive = !isActive">
-              <h5 class="panel-title">R o u n d<hr>3</h5>
-            </div>
-            <div class="panel-body">
-              <ul>
-                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
-                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
-                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
-                  {{user_list.usernames[user_id]}}
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="panel panel-default panel-horizontal">
-            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive=false" ng-click="isActive = !isActive">
-              <h5 class="panel-title">R o u n d<hr>4</h5>
-            </div>
-            <div class="panel-body">
-              <ul>
-                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
-                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
-                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
-                  {{user_list.usernames[user_id]}}
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="panel panel-default panel-horizontal">
-            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive=false" ng-click="isActive = !isActive">
-              <h5 class="panel-title">R o u n d<hr>5</h5>
-            </div>
-            <div class="panel-body">
-              <ul>
-                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
-                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
-                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
-                  {{user_list.usernames[user_id]}}
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-      </div>
     </div>
-    <!-- /ROUNDS  -->
   </div>
 </div>
