--- a/app/views/join_league.view.html
+++ b/app/views/join_league.view.html
@@ -1,5 +1,7 @@
-<p> You are joining a League</p>
+<div class = "container-fluid">
+  <p> You are joining a League</p>
 
-<input type="text" ng-model="league_id" placeholder="League ID">
+  <input type = "text" ng-model = "league_id" placeholder = "League ID">
 
-<button ng-click="joinLeague()">Join League!</button>
+  <button ng-click = "joinLeague()">Join League!</button>
+</div>
