--- a/app/views/new_league.view.html
+++ b/app/views/new_league.view.html
@@ -1,5 +1,7 @@
-<p> You are creating a new League</p>
+<div class = "container-fluid">
+  <p> You are creating a new League</p>
 
-<input type="text" ng-model="league_name" placeholder="League Name">
+  <input type = "text" ng-model = "league_name" placeholder = "League Name">
 
-<button ng-click="createLeague()">Create League!</button>
+  <button ng-click = "createLeague()">Create League!</button>
+</div>
