--- a/app/views/userpage.view.html
+++ b/app/views/userpage.view.html
@@ -1,8 +1,10 @@
-<p>Hello {{user.name}}!</p>
+<div class = "container-fluid">
+  <p>Hello {{user.name}}!</p>
 
-<p>Your Leagues:</p>
-<ul>
-  <li ng-repeat="league in leagues">
-    <a ui-sref="league({id:league.id})">{{league.name}}</a>
-  </li>
-</ul>
+  <p>Your Leagues:</p>
+  <ul>
+    <li ng-repeat = "league in leagues">
+      <a ui-sref = "league({id:league.id})">{{league.name}}</a>
+    </li>
+  </ul>
+</div>
