--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -1,14 +1,5 @@
 <p ng-if="state=='connecting'"> Connecting to draft...</p>
 <p ng-if="state=='loading'"> Loading...</p>
-
-          <p>ShortList:</p>
-  <ul>
-    <li ng-repeat="player in shortList">
-      <button ng-click="removeFromShortList(player._id)">{{player.number}} - {{player.name}} - {{player.positionDescription}} - {{player.team}}</button>
-    </li>
-  </ul>
-
-
 <div ng-if="state=='connected'">
   <div class="" id="draft">
     <!-- ROUNDS  -->
@@ -161,7 +152,7 @@
                       <td>{{ player.name }}</td>
                       <td>{{ player.team }}</td>
                       <td>
-                        <button ng-click=""><i class="fa fa-star"></i> Favorite</button>
+                        <button ng-if="team < 23" ng-click="favourite(player.data_id)"><i class="fa fa-star"></i> Favorite</button>
                         <button ng-if="team < 23" ng-click="pick(player.data_id)"><i class="fa fa-hand-pointer-o"></i> Pick</button>
                       </td>
                     </tr>
@@ -337,8 +328,9 @@
                 <li ng-repeat="favorite in favorites">
                   <div ng-if="players[favorite.player_id].positionDescription =='Goalkeeper'">
                     {{players[favorite.player_id].name}}
-                  </div>
-                  <td><button ng-click="pick(player._id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                    <td><button ng-click="pick(player_id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                    <td><button ng-click="removeFavourite(player_id)"><i class="fa fa-hand-pointer-o"></i> Remove</button></td>
+                  </div>                  
                 </li>
               </ul>
             </accordion-group>
@@ -347,8 +339,9 @@
                 <li ng-repeat="favorite in favorites">
                   <div ng-if="players[favorite.player_id].positionDescription =='Defender'">
                     {{players[favorite.player_id].name}}
-                  </div>
-                  <td><button ng-click="pick(player._id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                    <td><button ng-click="pick(player_id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                    <td><button ng-click="removeFavourite(player_id)"><i class="fa fa-hand-pointer-o"></i> Remove</button></td>
+                  </div>                  
                 </li>
               </ul>
             </accordion-group>
@@ -357,8 +350,9 @@
                 <li ng-repeat="favorite in favorites">
                   <div ng-if="players[favorite.player_id].positionDescription =='Midfielder'">
                     {{players[favorite.player_id].name}}
-                  </div>
-                  <td><button ng-click="pick(player._id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                    <td><button ng-click="pick(player_id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                    <td><button ng-click="removeFavourite(player_id)"><i class="fa fa-hand-pointer-o"></i> Remove</button></td>
+                  </div>                  
                 </li>
               </ul>
             </accordion-group>
@@ -367,8 +361,9 @@
                 <li ng-repeat="favorite in favorites">
                   <div ng-if="players[favorite.player_id].positionDescription =='Forward'">
                     {{players[favorite.player_id].name}}
-                  </div>
-                  <td><button ng-click="pick(player._id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                     <td><button ng-click="pick(player_id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                     <td><button ng-click="removeFavourite(player_id)"><i class="fa fa-hand-pointer-o"></i> Remove</button></td>
+                  </div>                 
                 </li>
               </ul>
             </accordion-group>
