--- a/app/views/new_league.view.html
+++ b/app/views/new_league.view.html
@@ -2,6 +2,7 @@
   <p> You are creating a new League</p>
 
   <input type = "text" ng-model = "league_name" placeholder = "League Name">
+  <input type = "text" ng-model = "league_time" placeholder = "Draft Trun Time">
 
   <button ng-click = "createLeague()">Create League!</button>
 </div>
