--- a/app/styles/draft.scss
+++ b/app/styles/draft.scss
@@ -156,8 +156,7 @@
 
     #draft_table_section {
       #draft-filter {
-        padding-left: 0;
-        margin-top: 3em;
+        padding-left: 5px !important;
 
         input {
           border-radius: 0;
@@ -225,6 +224,7 @@
 
           table {
             border: none;
+            background: $lighter_2;
 
             thead {
               th {
